name:                raptr
version:             0.1.0.0
synopsis:            Raft consensus module over HTTP/S
description:         Please see README.md
homepage:            http://github.com/capital-match/raptr#readme
license:             BSD3
license-file:        LICENSE
author:              Arnaud Bailly <arnaud@capital-match.com>
maintainer:          Arnaud Bailly <arnaud@capital-match.com>
copyright:           2015 Arnaud Bailly - Capital Match
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , kontiki
                     , http-conduit
                     , wai, warp
  default-language:    Haskell2010

test-suite tests
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , raptr-http
                     , http-conduit
                     , wai, warp
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/capital-match/raptr-http
