name:                raptr
version:             0.1.0.0
synopsis:            Raft consensus module over HTTP/S
description:         Please see README.md
homepage:            http://github.com/capital-match/raptr#readme
license:             BSD3
license-file:        LICENSE
author:              Arnaud Bailly <arnaud@capital-match.com>
maintainer:          Arnaud Bailly <arnaud@capital-match.com>
copyright:           2015 Arnaud Bailly - Capital Match
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Network.Raptr.Raptr
                     , Control.Concurrent.Queue
  other-modules:       Network.Raptr.Node
                     , Network.Raptr.Client
                     , Network.Raptr.Server
                     , Network.Raptr.Types
                     , System.IO.Storage
                     , Control.Concurrent.Timer
  build-depends:       base >= 4.7 && < 5, mtl
                     , kontiki
                     , http-client, http-conduit, wai, warp, network-uri, http-types
                     , network, directory
                     , async, stm, random
                     , bytestring, containers, binary, aeson, text, lens
  default-language:    Haskell2010

test-suite tests
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , raptr
                     , http-conduit, http-types
                     , wai, warp, http-client, network-uri
                     , stm, mtl, binary, bytestring, lens
                     , tasty >= 0.7, tasty-hspec, hspec, hspec-wai
                     , filepath, async
                     , QuickCheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/capital-match/raptr
